[KARAF-5929]fix several itests failed with JDK11